@@ -30,9 +30,6 @@
 const char * os_openbsd_cpp_cvsid = "$Id$"
   OS_OPENBSD_H_CVSID;
 
-/* global variable holding byte count of allocated memory */
-extern long long bytes;
-
 enum warnings {
   BAD_SMART, MAX_MSG
 };
@@ -132,7 +129,6 @@ get_dev_names(char ***names, const char *prefix)
       return -1;
     }
     sprintf(mp[n], "%s%s%c", net_dev_prefix, p, 'a' + getrawpartition());
-    bytes += strlen(mp[n]) + 1;
     n++;
   }
 
@@ -144,7 +140,6 @@ get_dev_names(char ***names, const char *prefix)
   }
   else
     mp = tmp;
-  bytes += (n) * (sizeof(char *));
   *names = mp;
   return n;
 }
